[gd_scene load_steps=7 format=2]

[ext_resource path="res://Fonts/MainFont.tres" type="DynamicFont" id=1]
[ext_resource path="res://Scripts/QuitButton.gd" type="Script" id=2]
[ext_resource path="res://Fonts/KGBlankSpaceSolid.ttf" type="DynamicFontData" id=3]
[ext_resource path="res://Scripts/Main.gd" type="Script" id=4]

[sub_resource type="DynamicFont" id=1]
size = 20
outline_size = 2
outline_color = Color( 0, 0, 0, 1 )
use_filter = true
extra_spacing_char = 1
font_data = ExtResource( 3 )

[sub_resource type="DynamicFont" id=2]
size = 20
outline_size = 2
outline_color = Color( 0, 0, 0, 1 )
use_filter = true
extra_spacing_char = 1
font_data = ExtResource( 3 )

[node name="Main" type="Node2D"]
script = ExtResource( 4 )

[node name="Main" type="Panel" parent="."]
margin_right = 1024.0
margin_bottom = 600.0
__meta__ = {
"_edit_use_anchors_": true
}

[node name="Background" type="Node2D" parent="Main"]

[node name="Background" type="ColorRect" parent="Main/Background"]
margin_right = 1024.0
margin_bottom = 600.0
color = Color( 0.858824, 0.878431, 1, 1 )
__meta__ = {
"_edit_use_anchors_": true
}

[node name="HBoxMainReg" type="HBoxContainer" parent="Main"]
anchor_right = 1.0
anchor_bottom = 1.0
alignment = 1
__meta__ = {
"_edit_use_anchors_": true
}

[node name="VBoxMainReg" type="VBoxContainer" parent="Main/HBoxMainReg"]
margin_left = 156.0
margin_right = 867.0
margin_bottom = 600.0
custom_constants/separation = 128

[node name="Title" type="Label" parent="Main/HBoxMainReg/VBoxMainReg"]
margin_right = 711.0
margin_bottom = 30.0
custom_fonts/font = ExtResource( 1 )
text = "Are You a new or existing team or individual?"
align = 1
valign = 1

[node name="VBoxRegister" type="VBoxContainer" parent="Main/HBoxMainReg/VBoxMainReg"]
margin_top = 158.0
margin_right = 711.0
margin_bottom = 235.0
custom_constants/separation = 10

[node name="2ndTitle" type="Label" parent="Main/HBoxMainReg/VBoxMainReg/VBoxRegister"]
margin_right = 711.0
margin_bottom = 27.0
custom_fonts/font = SubResource( 1 )
text = "If you are a new team or individual please register here:"
align = 1
valign = 1

[node name="RegisterButton" type="Button" parent="Main/HBoxMainReg/VBoxMainReg/VBoxRegister"]
margin_top = 37.0
margin_right = 711.0
margin_bottom = 77.0
rect_min_size = Vector2( 0, 40 )
custom_fonts/font = ExtResource( 1 )
text = "Register here!"

[node name="VBoxContainer" type="VBoxContainer" parent="Main/HBoxMainReg/VBoxMainReg"]
margin_top = 363.0
margin_right = 711.0
margin_bottom = 434.0

[node name="Title" type="Label" parent="Main/HBoxMainReg/VBoxMainReg/VBoxContainer"]
margin_right = 711.0
margin_bottom = 27.0
custom_fonts/font = SubResource( 2 )
text = "If you are a existing team please continue here:"
align = 1
valign = 1

[node name="ExistingTeamButton" type="Button" parent="Main/HBoxMainReg/VBoxMainReg/VBoxContainer"]
margin_top = 31.0
margin_right = 711.0
margin_bottom = 71.0
rect_min_size = Vector2( 0, 40 )
custom_fonts/font = ExtResource( 1 )
text = "Existing team"

[node name="HBoxTeamBool" type="HBoxContainer" parent="Main"]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
alignment = 1
__meta__ = {
"_edit_use_anchors_": true
}

[node name="VBoxMainBool" type="VBoxContainer" parent="Main/HBoxTeamBool"]
margin_left = 303.0
margin_right = 720.0
margin_bottom = 600.0
custom_constants/separation = 128

[node name="Title" type="Label" parent="Main/HBoxTeamBool/VBoxMainBool"]
margin_right = 417.0
margin_bottom = 30.0
custom_fonts/font = ExtResource( 1 )
text = "Are You a team or individual?"
align = 1
valign = 1

[node name="VBoxTeam" type="VBoxContainer" parent="Main/HBoxTeamBool/VBoxMainBool"]
margin_top = 158.0
margin_right = 417.0
margin_bottom = 235.0
custom_constants/separation = 10

[node name="2ndTitle" type="Label" parent="Main/HBoxTeamBool/VBoxMainBool/VBoxTeam"]
margin_right = 417.0
margin_bottom = 27.0
custom_fonts/font = SubResource( 1 )
text = "If you are a team Click here:"
align = 1
valign = 1

[node name="TeamsButton" type="Button" parent="Main/HBoxTeamBool/VBoxMainBool/VBoxTeam"]
margin_top = 37.0
margin_right = 417.0
margin_bottom = 77.0
rect_min_size = Vector2( 0, 40 )
custom_fonts/font = ExtResource( 1 )
text = "Teams!"

[node name="VBoxIndividual" type="VBoxContainer" parent="Main/HBoxTeamBool/VBoxMainBool"]
margin_top = 363.0
margin_right = 417.0
margin_bottom = 434.0

[node name="Title" type="Label" parent="Main/HBoxTeamBool/VBoxMainBool/VBoxIndividual"]
margin_right = 417.0
margin_bottom = 27.0
custom_fonts/font = SubResource( 2 )
text = "If you are a Individual Click here:"
align = 1
valign = 1

[node name="IndividualButton" type="Button" parent="Main/HBoxTeamBool/VBoxMainBool/VBoxIndividual"]
margin_top = 31.0
margin_right = 417.0
margin_bottom = 71.0
rect_min_size = Vector2( 0, 40 )
custom_fonts/font = ExtResource( 1 )
text = "Individuals!"

[node name="Node2D" type="Node2D" parent="."]

[node name="QuitButton" type="Button" parent="Node2D"]
margin_right = 65.0
margin_bottom = 36.0
custom_fonts/font = ExtResource( 1 )
text = "Quit"
script = ExtResource( 2 )

[connection signal="pressed" from="Main/HBoxMainReg/VBoxMainReg/VBoxRegister/RegisterButton" to="." method="_on_RegisterButton_pressed"]
[connection signal="pressed" from="Main/HBoxMainReg/VBoxMainReg/VBoxContainer/ExistingTeamButton" to="." method="_on_ExistingTeamButton_pressed"]
[connection signal="pressed" from="Main/HBoxTeamBool/VBoxMainBool/VBoxTeam/TeamsButton" to="." method="_on_TeamsButton_pressed"]
[connection signal="pressed" from="Main/HBoxTeamBool/VBoxMainBool/VBoxIndividual/IndividualButton" to="." method="_on_IndividualButton_pressed"]
[connection signal="pressed" from="Node2D/QuitButton" to="Node2D/QuitButton" method="_on_QuitButton_pressed"]
